# swagger.yaml
@@ -9,6 +9,7 @@ basePath: /api/v1
 schemes:
   - http
 paths:
+  # User Moduls
   /user/login:
     post:
       tags:
@@ -101,9 +102,142 @@ paths:
           description: Invalid Fields
         "500":
           description: Internal Server Error
-  /account/getAaccount:
+  # Account  Moduls
+  /account/getAccount:
     get:
+      security:
+        - Bearer: []
       tags:
+        - Account Module
+      summary: Get Account Information
+      parameters:
+        - in: header
+          name: Authorization
+          required: true
+          type: string
+      produces:
+        - application/json
+      responses:
+        "200":
+          description: getAccount retrieved successully
+          schema:
+            $ref: "#/definitions/Account"
+        "400":
+          description: Invalid Fields
+        "500":
+          description: Internal Server Error
+# 获取特定账户的所有交易
+  /account/transactions/{accountId}:
+    get: 
+      security:
+        - Bearer: []
+      tags:
+        - Transaction Module
+      summary: Get Account Transactions
+      parameters:
+        - in: header
+          name: Authorization
+          required: true
+          type: string
+        - in: path
+          name: accountId
+          description: ID of the user's account
+          required: true
+          type: string
+      produces:
+        - application/json
+      responses:
+        "200":
+          description: Transactions retrieved successully
+          schema:
+            $ref: "#/definitions/Transaction"
+        "400":
+          description: Invalid Fields
+        "500":
+          description: Internal Server Error  
+  # 修改备注
+    put:
+      security:
+        - Bearer: []
+      tags:
+        - Transaction Module
+      summary: change Account Transactions
+      parameters:
+        - in: header
+          name: Authorization
+          required: true
+          type: string
+        - in: body
+          name: body
+          description: Updated Transaction Payload
+          required: true
+          schema:
+            type: object
+            properties:
+              token:
+                type: string
+                description: User authentication token (JWT)
+              transactionId:
+                type: string
+                description: ID of the transaction to be modified
+              category:
+                type: string
+                description: Updated category of the transaction
+              note:
+                type: string
+                description: Updated note of the transaction
+            required:
+              - token
+              - transactionId
+      produces:
+        - application/json
+      responses:
+        "200":
+          description: Transaction updated successully
+          schema:
+            $ref: "#/definitions/TransactionUpdate"
+        "400":
+          description: Invalid Fields
+        "500":
+          description: Internal Server Error
+    delete:
+      security:
+        - Bearer: []
+      tags:
+        - Transaction Module
+      summary: Delete Account Transactions
+      parameters:
+        - in: header
+            name: Authorization
+            required: true
+            type: string
+        - in: path
+          name: transactionId
+          description: ID of the transaction to be deleted
+          required: true
+          type: string
+        - in: query
+          name: category
+          description: Deleted category of the transaction
+          required: false
+          type: string
+        - in: query
+          name: note
+          description: Deleted note of the transaction
+          required: false
+          type: string
+      produces:
+        - application/json
+      responses:
+        "200":
+          description: Transaction deleted successully
+          schema:
+          $ref: "#/definitions/TransactionUpdate"
+        "400":
+          description: Invalid Fields
+        "500": 
+          description: Internal Server Error
+
 securityDefinitions:
   Bearer:
     type: apiKey
@@ -159,3 +293,59 @@ definitions:
     properties:
       userName:
         type: string
+  Account:
+    type: object
+    properties:
+      id:
+        type: string
+        description: Unique identifier for the account
+      accountTitle:
+        type: string
+        description: Title of the account
+      amount:
+        type: number
+        description: Current balance of the account
+      description:
+        type: string
+        description: Description of the account
+  Transaction:
+    type: object
+    properties:
+      id:
+        type: string
+        description: Unique identifier for the transaction
+      accountId:
+        type: string
+        description: ID of the account associated with the transaction
+      date:
+       type: string
+       format: date
+       description: Date of the transaction
+      description:
+       type: string
+       description: Description of the transaction
+      amount:
+        type: number
+        description: Amount of the transaction
+      balance:
+        type: number
+        description: Current balance of the account
+      transactionType:
+        type: string
+        description: Type of the transaction 
+      category:
+        type: string
+        description: Category of the transaction
+      note:
+        type: string
+        description: Note associated with the transaction
+
+  TransactionUpdate:
+    type: object
+    properties:
+      note:
+        type: string
+        description: Updated note for the transaction
+      category:
+        type: string
+        description: Category of the category
